# musicmind-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  plan.md  pyproject.toml
scripts/: connect-claude.sh
src/musicmind/: __init__.py  server.py  setup.py
src/musicmind/tools/: catalog.py  helpers.py  library.py  manage.py  playback.py
tests/: test_auth.py
